--- a/cvAsterix.html
+++ b/cvAsterix.html
@@ -7,6 +7,43 @@
 
 </head>
 <body>
-
+  <div class="Page">
+    <div class="infophoto">
+      <div class="info">
+        <p><strong>Astérix</strong><br/>
+        Né le 29 octobre 1959<br/>
+        Agé de 35 ans
+        </p>
+        <p>Habite dans un village d'irréductibles Gaulois</p>
+      </div>
+      <div class="photo">
+        <img src="asterix.png" alt="Photo d'Astérix"/>
+      </div>
+      <div class="Particularité">
+        <h2>Particularité</h2>
+        <div class="Part-gauche">
+          <p>Astérix est un petit blond à moustaches. Il est intelligent, astucieux et héroïque. Son âge n’est pas déterminé mais il aurait environs 35 ans. 
+            Astérix est le seul anti-héros (au vue de son physique) qui n’ait jamais autant collectionné les succès et les exploits. 
+            Dans ses aventures sa ruse légendaire et la précieuse potion magique du druide Panoramix lui ont permis de se tirer des pires difficultés, en se couvrant souvent au passage de gloire.</p>
+          <p>Astérix a ainsi fait main basse sur la couronne de lauriers de César, a remporté une médaille d’or aux Jeux Olympiques, a accompli les 12 travaux de César. 
+            Astérix est devenu un mythe et un symbole international de toutes les résistances aux Empires qui tentent d’imposer ici ou là leurs lois et leurs monopoles.  
+            Astérix est doublé par Roger Carel dans tous les films d'animation jusqu’en 2018. Dans ans les films, il a été interprété par Christian Clavier, Clovis Cornillac et Édouard Baer. </p> 
+        </div>
+      </div>
+    <div class="langue">
+      <h2>Langues parlées</h2>
+      <div class="lan-gauche">
+        <p>Francais :<br/>
+        Anglais : <br/>
+        Espagnol :</p> 
+      </div>
+      <div class="lan-droite">
+        <p>langue maternelle<br/>
+        Courant<br/>
+        Courant</p>
+      </div>
+    </div>
+    </div>
+  </div>
 </body>
 </html>
