--- a/cvAsterix.html
+++ b/cvAsterix.html
@@ -6,6 +6,33 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
+<header>
+  <nav class="navbar navbar-expand-sm bg-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> CV </a>
+        <ul class="sous">
+          <li class="sousList"> <a href="#" class ="aSousList"> Asterix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Obelix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Idefix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Albert Uderzo   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList" > René Goscinny  </a></li>
+
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> Caroussel </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> Boutique </a>
+      </li>
+    </ul>
+  </nav>
+
+</header>
 <body>
   <div class="Page">
     <div class="infophoto">
@@ -27,7 +54,8 @@
             Dans ses aventures sa ruse légendaire et la précieuse potion magique du druide Panoramix lui ont permis de se tirer des pires difficultés, en se couvrant souvent au passage de gloire.</p>
           <p>Astérix a ainsi fait main basse sur la couronne de lauriers de César, a remporté une médaille d’or aux Jeux Olympiques, a accompli les 12 travaux de César. 
             Astérix est devenu un mythe et un symbole international de toutes les résistances aux Empires qui tentent d’imposer ici ou là leurs lois et leurs monopoles.  
-            Astérix est doublé par Roger Carel dans tous les films d'animation jusqu’en 2018. Dans ans les films, il a été interprété par Christian Clavier, Clovis Cornillac et Édouard Baer. </p> 
+            Astérix est doublé par Roger Carel dans tous les films d'animation jusqu’en 2018.</p>
+          <p>Dans les films, il a été interprété par Christian Clavier, Clovis Cornillac et Édouard Baer. </p>
         </div>
       </div>
     <div class="langue">
