--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
   <meta charset="utf-8">
   <title>Titre de la page</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<body>
+<header>
+  <nav class="navbar navbar-expand-sm bg-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href=index.html>Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> CV </a>
+        <ul class="sous">
+          <li class="sousList"> <a href="#" class ="aSousList"> Asterix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Obelix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Idefix   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList"> Albert Uderzo   </a></li>
+          <li class="sousList"> <a href="#" class ="aSousList" > René Goscinny  </a></li>
 
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> Caroussel </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="boutique.html"> Boutique </a>
+      </li>
+    </ul>
+  </nav>
+
+</header>
+<body>
+<h1>Asterix et Obelix </h1>
+
+<p id="presentation"> L'histoire d’Astérix et Obélix se passe en 50 avant Jésus-Christ. Toute la Gaule est occupée par les Romains, sauf un village. C'est le village d'Astérix et Obélix. Leur druide, Panoramix, fabrique une potion magique qui les rend invincibles.
+  Astérix, personnage de fiction sorti tout droit de l'imagination du scénariste René Goscinny et du dessinateur Albert Uderzo, est né le 29 octobre 1959. Et l'irréductible gaulois trouve vite son public, avec son acolyte Obélix.
+  Au total, Astérix et Obélix ce sont 500 millions d'albums vendus à travers le monde depuis sa création. Ceci comment en 1959, lorsque René Goscinny et Albert Uderzo, ont réalisé qu'on avait oublié les gaulois.
+  Tout a commencé avec une commande d'illustration dans le journal jeunesse "Pilote" dont René Goscinny était le rédacteur en chef, qui veut mettre en avant la culture française à travers une BD divertissante. Le premier numéro de "Pilote" sort donc le 29 octobre 1959, et l'on y découvre la première planche d'Astérix le gaulois. Au fur et à mesure, le personnage prend son indépendance, il est façonné, tout comme les autres : chaque villageois a une moustache fournie et un prénom imaginatif terminant en « ix". Astérix devient le héros d'une bande dessinée à part entière et les ventes explosent.
+  René Goscinny et Albert Uderzo s’inspirent de l’histoire, ils se sont totalement appuyés sur des bases historiques sérieuses en se documentant régulièrement à chaque projet d'album, et en alternant entre reprise de faits réels et interprétation comique. Par exemple : les Romains qui vont aux bains, les combats des gladiateurs, la reine Cléopâtre, et les grands banquets.
+  Les gaulois ont un fort succès, ils appartiennent désormais au patrimoine français. Plusieurs films adaptés de la bande dessinée ont vu le jour, et même le parc d'attraction, le parc Astérix...
+</p>
+<img src="images/imageindex.gif">
 </body>
 </html>
